# solar-system

./: CMakeLists.txt  FinalProject.ipynb  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
data/: planet.json
include/: json_parsing.h  moon.h  planet-texture.h  planet.h  solarsystem.h  solarsystem_simulation.h  sphere.h
src/: json_parsing.cpp  moon.cc  planet-texture.cc  planet.cc  solarsystem.cc  solarsystem_simulation.cc  sphere.cc
tests/: moon-test.cc  planet-test.cc  solarsystem-test.cc  test_main.cc
